2006-08-19  Rodney Dawes  <dobey@novell.com>

	* scalable/apps/Makefile.am: Fix web-browser.svg not being installed

	Fixes #351249

2006-08-19  Rodney Dawes  <dobey@novell.com>

	* 32x32/actions/zoom-*.*: 32x32 versions of zoom icons from
	Lapo Calamandrei

2006-08-19  Rodney Dawes  <dobey@novell.com>

	* 16x16/status/weather-*.*: 16x16 versions of weather icons from
	Lapo Calamandrei

2006-08-15  Jakub Steiner <jimmac@ximian.com>

	* {32x32,scalable}/categories/applications-development: traced by
		Andreas Nilsson.

2006-08-15  Jakub Steiner <jimmac@ximian.com>

	* 32x32/status/weather: weather status icons at 32x32px. Most
		submitted by Lapo Calamandrei

2006-08-09  Jakub Steiner <jimmac@ximian.com>

	* {22x22,24x24}/status/weather: bitmaps (16x16 to do)

2006-08-09  Jakub Steiner <jimmac@ximian.com>

	* scalable/status/weather*: awesome weather goodness by lapo
	  (minor tweaks)

2006-08-08  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.ac: Updated version to 2.15.91 for release

2006-08-08  Jakub Steiner <jimmac@ximian.com>

	* 32x32/categories/Makefile.am: fix typo. fixes #350369

2006-08-07  Jakub Steiner <jimmac@ximian.com>

	* evolution: re-add the evolution app icon temporarily, before
		#350253 get's sorted out

2006-08-07  Jakub Steiner <jimmac@ximian.com>

	* applications-accessories: scalables by Andreas Nilsson

2006-08-07  Jakub Steiner <jimmac@ximian.com>

	* {32x32,scalable}/categories/preferences-system*: based on another
		submission by Andreas Nilsson

2006-08-07  Jakub Steiner <jimmac@ximian.com>

	* 32x32,scalable/places/network-workgroup*: scalables based on
		icon by Andreas Nilsson

	* 48x48/places/network*: remove bitmaps

2006-08-07  Jakub Steiner <jimmac@ximian.com>

	* 32x32,scalable/window-new: missing sizes (by lapo)
	* 22x22/apps/utilities-terminal: new details (lapo)
	* utilities-system-monitor: can't really tell a
		difference, but lapo claims it's better :)
	* scalable/devices/computer, drive-optical, removable-media,