@@ -129,7 +129,6 @@ scalable/Makefile
 48x48/emblems/Makefile
 48x48/filesystems/Makefile
 48x48/places/Makefile
-48x48/status/Makefile
 48x48/stock/Makefile
 48x48/stock/code/Makefile
 48x48/stock/data/Makefile
