@@ -1,3 +1,11 @@
+2006-08-20  Rodney Dawes  <dobey@novell.com>
+
+	* configure.in:
+	* 48x48/Makefile.am:
+	* 48x48/status/*:
+	Remove 48x48/status as all the icons that were here, are now available
+	in the scalable/status directory
+
 2006-08-19  Rodney Dawes  <dobey@novell.com>
 
 	* scalable/apps/Makefile.am: Fix web-browser.svg not being installed
